--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,8 +35,4 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       materialized: table
-
-vars:
-        my_first_variable: True
-        my_second_variable: 2020
-        my_third_variable : 1      
+  pre-hook : "insert into analytics.dbt.audit(model,state,time) values ( '1213','starting model deployemnt',current_timestamp)"
